--- a/rest_api/.gitignore
+++ b/rest_api/.gitignore
@@ -11,9 +11,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # netbeans
-**/nbproject/private/
-**/nbproject/Makefile-*.mk
-**/nbproject/Package-*.bash
+nbproject/
 build/
 nbbuild/
 dist/
@@ -38,5 +36,9 @@ local.properties
 # vim youcompleteme
 .classpath
 .project
+
+#intellij
+.idea/
+*.iml
 
 *.log
