--- a/ci_cd/docker-compose.yml
+++ b/ci_cd/docker-compose.yml
@@ -2,17 +2,16 @@ version: "3"
 
 services:
   jenkins:
-    image: jenkinsci/blueocean
+    image: jenkinsci/blueocean:1.16.0-bcc31d32159f
     user: root
     volumes:
       - jenkins-data:/var/jenkins_home
-      - /home/tqs/repo/rest_api:/home
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8081:8080"
 
   sonarqube:
-    image: sonarqube
+    image: sonarqube:7.7-community
     ports:
       - "9001:9000"
     environment:
@@ -27,13 +26,15 @@ services:
       - db
 
   db:
-    image: postgres
+    image: postgres:11.3
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
     volumes:
       - postgresql:/var/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
+    expose:
+      - 5432
 
 volumes:
   jenkins-data:
