--- a/rest_api/src/main/resources/application.properties
+++ b/rest_api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://192.168.160.63:3306/db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
