--- a/rest_api/Dockerfile
+++ b/rest_api/Dockerfile
@@ -2,6 +2,8 @@ FROM maven:3.6.1-jdk-8
 
 WORKDIR /app
 
+# this jar comes from command `mvn package` executed
+#  on the deploy stage of the Jenkins pipeline
 COPY target/*.jar /app
 
 EXPOSE 8080
