--- a/rest_api/Jenkinsfile
+++ b/rest_api/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     agent {
         docker {
             image 'pipeline_agent'
-            args '-v /root/.m2:/root/.m2 -v /var/run/docker.sock:/var/run/docker.sock'
+            args '-v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
     stages {
@@ -40,11 +40,7 @@ pipeline {
 
                         docker build -t production_server .
 
-                        #Assume that only one container is running the production_server image
-                        if [[ $(docker ps | awk \'{print $2}\' | grep production_server | wc | awk \'{print $1}\') -gt 0 ]] ; then
-                            docker stop production
-                            docker rm production
-                        fi;
+                        docker stop production || true && docker rm production || true
 
                         docker run -p 8080:8080 -d --name production production_server
                     '''
