--- a/rest_api/src/test/resources/application.properties
+++ b/rest_api/src/test/resources/application.properties
@@ -1,5 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.datasource.url=jdbc:mysql://192.168.160.63:3306/tests?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/tests?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.160.63:3306/tests?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
