--- a/rest_api/Jenkinsfile
+++ b/rest_api/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         stage('Test') {
             steps {
                 dir('rest_api') {
-                    sh "mvn -U test"
+                    sh "mvn -U clean test"
                 }
             }
         }
