--- a/rest_api/pom.xml
+++ b/rest_api/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.jmeter/ApacheJMeter_core -->
+        <dependency>
+            <groupId>org.apache.jmeter</groupId>
+            <artifactId>ApacheJMeter_core</artifactId>
+            <version>5.1.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -122,6 +128,7 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
+        
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -137,10 +144,10 @@
 
         <sonar.exclusions>
             **/SpringBootWebApplication.java,
-            **/domain/persistance/*.java
-            **/domain/responses/*.java
-            **/domain/rest/*.java
-            **/controllers/WebSiteController.java,
+            **/domain/persistance/*.java,
+            **/domain/responses/*.java,
+            **/domain/rest/*.java,
+            **/controllers/WebSiteController.java
         </sonar.exclusions>
     </properties>
 
