--- a/rest_api/src/test/resources/application.properties
+++ b/rest_api/src/test/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 server.servlet.session.cookie.http-only=false
+
+security.basic.enabled=false
+management.security.enabled=false
